# onedial

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PRD.md  README.md
.github/workflows/: build.yml
resources/profiles/: drive.nam  lead.nam  warm.nam
scripts/: generate_icon.py
src/: IRLoader.cpp  IRLoader.h  NAMEngine.cpp  NAMEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ZoneBlender.cpp  ZoneBlender.h
tools/: test_dial.cpp
website/: index-v10.html  index-v11.html  index-v2.html  index-v3-amps.html  index-v3-photos.html  index-v4-marshall.html  index-v5-amphead.html  index-v6.html  index-v7-part1.html  index-v7-part2.html  index-v7.html  index-v8.html  index-v9.html  index.html  v7-design-review.md
